Adding cell that converts a vector of vectors of cv::Vec3f (clusters for tables) into a RecognizedObjectArray pointcloud message.

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -14,6 +14,7 @@ ectomodule(io_ros DESTINATION ${PROJECT_NAME}/ecto_cells
            module.cpp
            MsgAssembler.cpp
            visualization_msgs_MarkerArray.cpp
+           PointCloudMsgAssembler.cpp
 )
 
 link_ecto(io_ros ${catkin_LIBRARIES})
